# WISP

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: api.html  examples.html  hardware.html  index.html  nav.js  plugins.html  providers.html  quickstart.html  style.css  transports.html  usecases.html
examples/ros2_robot/: main.py
examples/smart_home/: config.json  main.py
examples/weather_station/: main.py
tests/: __init__.py  test_ai.py  test_core.py
wisp/: __init__.py
wisp/ai/: __init__.py  client.py  prompt.py
wisp/ai/providers/: __init__.py  groq.py  openrouter.py
wisp/cli/: __init__.py  main.py
wisp/core/: __init__.py  capability.py  config.py  device.py  errors.py
wisp/hardware/: __init__.py  hal.py  scanner.py
wisp/hardware/sensors/: __init__.py  bh1750.py  bme280.py  mpu6050.py  sht31.py  ssd1306.py
wisp/plugins/: __init__.py  base.py  ros2.py
wisp/transports/: __init__.py  base.py  cli.py  http.py  telegram.py
